# forrust

./: Cargo.toml  README.md  data.txt  data2.txt  data3.txt  data4.txt  data_sub.txt
src/: data.rs  lib.rs  parser.rs  plotable.rs  time_series.rs
src/forecasting/: expsmooth.rs  mod.rs
src/prediction/: dumb.rs  mod.rs
src/regression/: linear.rs  mod.rs
src/time_series/: grouper.rs  merger.rs  mod.rs  moving_median.rs  season.rs
