[package]
name = "forrust"
version = "0.1.6"
authors = ["diespeso <regalado.correo@gmail.com>"]
edition = "2018"
description = "very dumb, not yet usable package for time series forecasting"
license = "MIT"
repository = "https://github.com/diespeso/forrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotlib = "0.5.1"